--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <ul class="icons1">
             <li>
-                <a href="#"><img src="../Preentrega1Gonzalez/icons/pesa.png" width="30" height="30"></a>
+                <a href="#"><img src="/icons/pesa.png" width="30" height="30"></a>
             </li>
         </ul>
         <ul class="listHeader">
