--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="desciption" content="Bienvenido a Gimnasio Aquiles - Tu centro de fitness en Córdoba. Descubre nuestras clases, equipos modernos y entrenadores expertos para alcanzar tus objetivos de salud y bienestar. ¡Empieza tu transformación hoy!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Inicio</title>
+    <title>Aquiles GYM</title>
 </head>
 
 <body>
@@ -48,11 +49,7 @@
         <section class="seccionInicio2" >
 
             <article>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente facilis rerum non excepturi est.
-                    Corrupti id unde ab officiis omnis maxime odit, consequatur vero voluptatem. Velit veniam inventore
-                    ducimus molestiae., ipsum dolor sit amet consectetur adipisicing elit. Quod possimus eos iste,
-                    dolore qui odit necessitatibus eum quidem. Veritatis perspiciatis explicabo aspernatur quas
-                    perferendis obcaecati optio? Aliquid id maiores totam.</p>
+                <p>Practicar ejercicio y llevar un estilo de vida más activo requiere esfuerzo y tiempo, pero sin lugar a dudas merece la pena. Para facilitar su práctica y disfrutar de sus ventajas te recomendamos entrenar en instalaciones con equipamientos modernos, con un ambiente agradable y rodeado de instructores cualificados y con vocación, entregados para mejorar la vida de las personas a través del fitness.</p>
             </article>
             <article>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Qe_69_OERK4?si=pCBE55IYTV51vdQg"
@@ -102,7 +99,7 @@
         </seccion>
 
         <seccion class="seccionFoot3">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem obcaecati commodi iure impedit distinctio dolores facilis incidunt, alias corrupti, voluptas facere illum reiciendis perspiciatis! Delectus in minus sapiente atque repellendus!</p>
+            <p>Ofrecemos un gimnasio bien equipado y un ambiente motivador para ayudarte a alcanzar tus objetivos de fitness. Tenemos equipos de última generación y entrenadores altamente calificados listos para brindarte orientación personalizada. Disfrutá del mejor Gimnasio de Córdoba</p>
         </seccion>
 
     </footer>
