--- a/pages/club-de-beneficios.html
+++ b/pages/club-de-beneficios.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Únete al Club de Beneficios de Gimnasio Aquiles y disfruta de descuentos exclusivos, promociones especiales y ventajas únicas. ¡Aprovecha al máximo tu membresía!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -114,9 +115,7 @@
         </seccion>
 
         <seccion class="seccionFoot3">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem obcaecati commodi iure impedit
-                distinctio dolores facilis incidunt, alias corrupti, voluptas facere illum reiciendis perspiciatis!
-                Delectus in minus sapiente atque repellendus!</p>
+            <p>Ofrecemos un gimnasio bien equipado y un ambiente motivador para ayudarte a alcanzar tus objetivos de fitness. Tenemos equipos de última generación y entrenadores altamente calificados listos para brindarte orientación personalizada. Disfrutá del mejor Gimnasio de Córdoba!</p>
         </seccion>
 
     </footer>
