--- a/pages/miembros.html
+++ b/pages/miembros.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Accede a tu cuenta de miembro de Gimnasio Aquiles. Consulta horarios de clases, gestiona tu suscripción y mantente al día con las novedades exclusivas para miembros.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -78,13 +79,7 @@
                     </div>
             </article>
             <article class="miembrosRight">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, consequatur eaque molestiae ducimus
-                    quidem sint sit fugit nemo dolor cum itaque, cumque, incidunt velit eligendi temporibus quod
-                    similique quisquam minus?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum corporis
-                    consequuntur ullam porro aut cupiditate, modi possimus qui pariatur incidunt, deleniti hic
-                    architecto ex neque doloribus explicabo labore excepturi? Sint Lorem ipsum dolor sit amet
-                    consectetur adipisicing elit. Similique quo temporibus saepe atque impedit iusto, labore
-                    repellendus, et maxime, nam quia officiis totam. Odit eveniet tenetur ipsum. Unde, tempora suscipit.
+                <p>El club te presenta una experiencia única con 4 sedes pensadas especialmente para vos con una gran infraestructura. Contamos con Entrenamiento Personalizado centrado en tus metas y destinado a mejorar tu calidad de vida. Con Salones Equipados con las últimas máquinas y elementos, un mejor rendimiento en tu entrenamiento. Los mejores Entrenadores y Profesionales para acompañarte con tu objetivo. Y la buena onda de siempre en un Ambiente Relajado y Amigable
                 </p>
             </article>
         </section>
@@ -132,9 +127,7 @@
         </seccion>
 
         <seccion class="seccionFoot3">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem obcaecati commodi iure impedit
-                distinctio dolores facilis incidunt, alias corrupti, voluptas facere illum reiciendis perspiciatis!
-                Delectus in minus sapiente atque repellendus!</p>
+            <p>Ofrecemos un gimnasio bien equipado y un ambiente motivador para ayudarte a alcanzar tus objetivos de fitness. Tenemos equipos de última generación y entrenadores altamente calificados listos para brindarte orientación personalizada. Disfrutá del mejor Gimnasio de Córdoba</p>
         </seccion>
 
     </footer>
