--- a/pages/miembros.html
+++ b/pages/miembros.html
@@ -38,7 +38,7 @@
     </header>
     <main>
         <h1>Accesos a miembros</h1>
-        <h4>Turnero online</h4>
+        <h2 class="subtitMiem">Turnero online</h2>
         <section class="miembrosConteiner">
             <article class="miembrosLeft">
                 <form action="form.php" method="post">
